# CYBFFmpeg

./: .gitignore  CLAUDE.md  Package.swift  README.md
Sources/CYBFFmpeg/: CYBFFmpeg.swift
Sources/CYBFFmpeg/CybFFmpegC/: module.modulemap
Sources/CYBFFmpeg/CybFFmpegC/include/: cyb_ffmpeg.h  cyb_ffmpeg_generated.h
Sources/CYBFFmpeg/Internal/: PixelBufferConverter.swift  RustBridge.swift
Sources/CYBFFmpeg/Public/: Configuration.swift  FFmpegAudioFrame.swift  FFmpegDecoder.swift  FFmpegError.swift  FFmpegFrame.swift  FFmpegMediaInfo.swift
Tests/CYBFFmpegTests/: CYBFFmpegTests.swift
cyb-ffmpeg-core/: Cargo.toml  build.rs  cbindgen.toml
cyb-ffmpeg-core/src/: error.rs  lib.rs
cyb-ffmpeg-core/src/cache/: mod.rs
cyb-ffmpeg-core/src/decoder/: audio_frame.rs  config.rs  ffmpeg_decoder.rs  frame.rs  info.rs  mod.rs
cyb-ffmpeg-core/src/ffi/: mod.rs
cyb-ffmpeg-core/src/threading/: mod.rs
doc/: API_GUIDE.md  ARCHITECTURE.md  CACHE.md  CORE_TYPES.md  FFMPEG_BUILD.md  LGPL_COMPLIANCE.md  ROADMAP.md  RUST_FFI.md  TESTING.md
ffmpeg-build/scripts/: build-ffmpeg.sh  create-xcframework.sh  verify-lgpl.sh
